refactor(budget): code cleanup - remove unused imports - remove unnecessary comments - replace .get(0) pattern with .getFirst()